// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyFlags should render tenure and alerts 1`] = `
<DocumentFragment>
  <ul
    class="lbh-list hackney-property-alerts"
    style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
  >
    <li
      class="bg-dark-green"
    >
      Tenure: tenancyTypeDescription
    </li>
    <li
      class="bg-orange"
    >
      TMO: tmoName
    </li>
  </ul>
</DocumentFragment>
`;

exports[`PropertyFlags should render tenure and alerts 2`] = `
<DocumentFragment>
  <ul
    class="lbh-list hackney-property-alerts"
    style="display: flex; flex-direction: column; align-items: flex-start; margin-bottom: 1em;"
  >
    <li
      class="bg-dark-green"
    >
      Tenure: tenancyTypeDescription
    </li>
    <li
      class="bg-orange"
    >
      Alert: Alert 1 (
      <strong>
        type1
      </strong>
      )
    </li>
    <li
      class="bg-orange"
    >
      Alert: Alert 2 (
      <strong>
        type2
      </strong>
      )
    </li>
    <li
      class="bg-orange"
    >
      TMO: tmoName
    </li>
  </ul>
</DocumentFragment>
`;
